RESOLVED FIXED49615
[Qt] Focus ring does not show for image maps
https://bugs.webkit.org/show_bug.cgi?id=49615
Summary [Qt] Focus ring does not show for image maps
Yael
Reported 2010-11-16 12:56:20 PST
http://trac.webkit.org/changeset/53857 added support for focus rings on imagemaps, but each port needs to implement GraphicsContext::drawFocusRing(const Vector<Path>& paths, int width, int offset, const Color& color) in order to see a focus ring.
Attachments
Patch (2.38 KB, patch)
2010-11-16 13:56 PST, Yael
no flags
Patch (23.99 KB, patch)
2010-11-17 14:07 PST, Yael
no flags
Yael
Comment 1 2010-11-16 13:56:48 PST
Laszlo Gombos
Comment 2 2010-11-16 19:03:41 PST
Comment on attachment 74039 [details] Patch r=me. It seems that a fair amount of code could potentially be shared between the two GraphicsContext::drawFocusRing functions (and perhaps get rid if the "if 0" guard in the already landed code). Yael, after landing this, can you open a new bug for sharing the code ?
Yael
Comment 3 2010-11-17 05:27:06 PST
Comment on attachment 74039 [details] Patch Thanks for the review, Laszlo, I'll do the cleanup next.
Antonio Gomes
Comment 4 2010-11-17 06:00:31 PST
why no tests? :(
Yael
Comment 5 2010-11-17 06:01:37 PST
(In reply to comment #2) > (From update of attachment 74039 [details]) > r=me. > > It seems that a fair amount of code could potentially be shared between the two GraphicsContext::drawFocusRing functions (and perhaps get rid if the "if 0" guard in the already landed code). > > Yael, after landing this, can you open a new bug for sharing the code ? Unfortunately, we cannot enable the "#if 0" for drawing the focus ring around links. It gives very bad results. e.g. when a link spans multiple lines, the path between those lines is garbled.
Yael
Comment 6 2010-11-17 06:02:39 PST
(In reply to comment #4) > why no tests? :( I am about to enable the test LayoutTests/fast/images/imagemap-focus-ring.html for this.
Antonio Gomes
Comment 7 2010-11-17 06:04:00 PST
Comment on attachment 74039 [details] Patch It *must* land together or should be in the changelog.
Yael
Comment 8 2010-11-17 14:07:39 PST
Created attachment 74154 [details] Patch Same patch as before, with updated test result.
Eric Seidel (no email)
Comment 9 2010-11-18 03:20:15 PST
Comment on attachment 74039 [details] Patch Cleared Laszlo Gombos's review+ from obsolete attachment 74039 [details] so that this bug does not appear in http://webkit.org/pending-commit.
WebKit Commit Bot
Comment 10 2010-11-19 02:06:23 PST
The commit-queue encountered the following flaky tests while processing attachment 74154 [details]: fast/workers/storage/use-same-database-in-page-and-workers.html http/tests/loading/deleted-host-in-resource-load-delegate-callback.html Please file bugs against the tests. These tests were authored by beidson@apple.com and dumi@chromium.org. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 11 2010-11-19 02:31:44 PST
Comment on attachment 74154 [details] Patch Clearing flags on attachment: 74154 Committed r72371: <http://trac.webkit.org/changeset/72371>
WebKit Commit Bot
Comment 12 2010-11-19 02:31:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.