2010-11-19  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Antonio Gomes.

        [Qt] Focus ring does not show for image maps
        https://bugs.webkit.org/show_bug.cgi?id=49615

        * platform/qt/fast/images/imagemap-focus-ring-expected.checksum: Added.
        * platform/qt/fast/images/imagemap-focus-ring-expected.png: Added.
        * platform/qt/fast/images/imagemap-focus-ring-expected.txt: Added.
2010-11-19  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Antonio Gomes.

        [Qt] Focus ring does not show for image maps
        https://bugs.webkit.org/show_bug.cgi?id=49615

        Draw a focus ring for the paths surrounding the focus ring of image map area.
        Provide Qt specific results for the test fast/images/imagemap-focus-ring.html.

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::drawFocusRing):

Canonical link: https://commits.webkit.org/62833@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72371 268f45cc-cd09-0410-ab3c-d52691b4dbfc